# socorros

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
docs/: relatorio_tecnico.docx  ~$latorio_tecnico.docx
include/data/: DataLoader.h  DataManager.h  SaveManager.h  SteamDataLoader.h  SteamIdMapper.h
include/entities/: Achievement.h  Game.h  History.h  Player.h  Price.h  PuchasedGame.h  PurchasedGame.h
include/queries/: QueryEngine.h
include/structures/: BTree.h  BTreeNode.h  BTreePersistence.h  HashBase.h  HashEncadeamento.h  HashSondagem.h
src/data/: DataManager.cpp  SaveManager.cpp  SteamDataLoader.cpp
src/structures/: BTree.cpp  BTreeNode.cpp  BTreePersistence.cpp  HashEncadeamento.cpp  HashSondagem.cpp
tests/: CMakeLists.txt  test_btree.cpp  test_hash_table.cpp  test_queries.cpp  test_save_manager.cpp
